# shop-builder-development

./: .gitignore  .gitmodules  ABOUT.md  README.md
ab-testing/: 01. Основы статистики.ipynb  02. Проверка гипотез.ipynb  03_mde.ipynb  04_design.ipynb  05_bootstrap.ipynb  06_variance_reduction.ipynb  07. Выбор Метрик.ipynb  08. Стратификация.ipynb  09. CUPED.ipynb  10. Множественное тестирование.ipynb  11. Сплитилка трафика.ipynb  12_linearization.ipynb  checklist-ab.md
ai-kit-evals-package/: README.md  pyproject.toml
ai-kit-evals-package/eval-output/: ai-kit-eval-report.md  ai-kit-eval-score.json  dashboard-data.json
ai-kit-evals-package/evals/ai_kit_evals/: __init__.py  eval.py
ai-kit-evals-package/evals/registry/data/ai_kit_skills/: judge.json  samples.jsonl
ai-kit-evals-package/evals/registry/evals/: ai_kit_skills.yaml
ai-kit-evals-package/mini-app/: .gitignore  README.md  index.html  mini-app.json  package.json
ai-kit-evals-package/mini-app/src/: App.tsx  index.css
ai-kit-evals-package/mini-app/src/data/: dashboard-data.json
ai-kit-evals-package/scripts/: generate_github_visuals.py  run_ai_kit_eval.py
ai-kit-evals-package/visualizations/: dashboard-data.json
bugs/: 2026-05-20-xsolla-cli-publisher-status-not-configured.md  2026-05-20-xsolla-cli-readme-missing-create-website-command.md  2026-05-20-xsolla-cli-readme-shopbuilder-session-cookie-outdated.md  2026-05-20-xsolla-cli-sitebuilder-admin-privileges-required-403.md  2026-05-20-xsolla-cli-update-private-repo-404.md  README.md
site-builder-mcp/: .gitignore  package.json  setup-log.md  (+1 more)
(+29 files in other folders)
