[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-kit-evals"
version = "0.1.0"
description = "AI Kit skill evaluation package with OpenAI Evals-style registry and Mini Apps dashboard."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
openai-evals = ["evals"]

[tool.setuptools.packages.find]
where = ["evals"]

